solved x scrollbar issues

--- a/src/components/Content/styles.css
+++ b/src/components/Content/styles.css
@@ -14,10 +14,3 @@
     width: 30em;
 }
 
-
-.content{
-    height: 100vh;
-    top:0;
-    left:0;
-    position: fixed;
-}
